--- a/challenge_1/index.html
+++ b/challenge_1/index.html
@@ -1,2 +1,17 @@
-
-
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta http-equiv="content-type" content="text/html; charset=utf-8">
+    <title>Tic-Tac-Toe</title>
+    <link rel="stylesheet" href="styles.css">
+    <script src='./App.js'></script>
+</head>
+<body>
+    <div id='main'>
+        <header>My tic-tac-toe game</header>
+        <table id='board'></table>
+        <h3 id='status'></h3>
+        <button id='reset'>Reset</button>
+    </div>
+</body>
+</html>
