--- a/challenge_2/client/index.html
+++ b/challenge_2/client/index.html
@@ -1,2 +1,20 @@
-
-
+<!DOCTYPE html>
+<html>
+  <head>
+    <meta charset="UTF-8">
+    <title>CSV Report Generator</title>
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>
+    <script src='./App.js'></script>
+    <link rel="stylesheet" type="text/css" href="styles.css"/>
+  </head>
+  <body>
+      <form action='#'>
+          <label for="main">Upload your JSON here:</label>
+          <input id='file' type="file">
+          <!-- <textarea name="maintext"></textarea> -->
+          <button id='submit'>Submit</button>
+      </form>
+      <div id='csv'></div>
+      <a href='#' id='download'>Download</a>
+  </body>
+</html>
